@@ -1,3 +1,11 @@
+2012-08-27  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/testsuite/gpasm.old/testall:
+    don't stop at the first failure, report the number of tests failed
+  * gpasm/scan.l: force the scanner to always-interactive
+  * pasm/evaluate.c: iterative reimplementation of list_length()
+  * libgputils/gpsymbol.c, libgputils/gpsymbol.h:
+    added functions hashfunc_len() and get_symbol_len()
+
 2012-08-19  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/evaluate.c: implemented but ifdef-ed out the fix for shift left > 32,
     another fix for shift right > 32, taking into accont the sign extension
